--- a/calculator.html
+++ b/calculator.html
@@ -12,20 +12,29 @@ num.value = Math.pow(num.value, 3);
 
 }
 
+function potencia4() {
+
+var num = document.getElementById("n1");
+
+num.value = Math.pow(num.value, 4);
+
+}
 </script>
 
 </head>
 
 <body>
+<h1>Calculadora de Lourdes Herrero</h1>
 
 Number:
 
 <input type="text" id="n1"><p>
 
 <button onclick="cube()"> x^3 </button>
+<button onclick="potencia4()"> x^4 </button>
+
 
 </body>
-<h1>Calculadora de Lourdes Herrero</h1>
 
 </html>
 
